--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,9 @@ Temporary Items
 .idea/sbt.xml
 .idea/vcs.xml
 
+.project
+.classpath
+.idea/modules/PaintRepo-build.iml
+.idea/modules/PaintRepo-build.iml
+.idea/scala_settings.xml
+.idea/modules/PaintRepo-build.iml
