--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,4 @@ Temporary Items
 .idea/modules/PaintRepo-build.iml
 .idea/scala_settings.xml
 .idea/modules/PaintRepo-build.iml
+src/main/scala/RegexTest.sc
