--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,4 @@ Temporary Items
 src/main/scala/RegexTest.sc
 .idea/inspectionProfiles/Project_Default.xml
 .idea/scala_settings.xml
+.idea/modules/PaintRepo.iml
